--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "oUF"]
 	path = oUF
 	url = git@github.com:Adirelle/oUF.git
+[submodule ".release"]
+	path = .release
+	url = https://github.com/BigWigsMods/packager
