--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -14,7 +14,7 @@ jobs:
           submodules: true
       - name: Setup packager arguments
         id: packager-args
-        if: github.base_ref || (github.ref != 'refs/heads/master' && !startsWith(github.ref, 'refs/tags/')
+        if: github.base_ref || (github.ref != 'refs/heads/master' && !startsWith(github.ref, 'refs/tags/'))
         run: echo '::set-output name=args::-d'
       - name: Package and deploy
         uses: BigWigsMods/packager@cf62788
@@ -27,4 +27,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: packages
-          path: .release/AdiButtonAuras*.zip
+          path: .release/oUF_Adirelle*.zip
